# hackathon_IBM_DIA

./: .env  .gitignore  Questions-Export-2025-October-27-1237 (1)(Questions-Export-2025-October-2).numbers  README.md  app.py  pyproject.toml  test.py
app/: main.py
app/faiss/: index.faiss  index.pkl
app/routers/: embedding.py  rag.py
chatting_interface/: Rag_completion.py  interface.py
files/: Questions-Export-2025-October-27-1237 (1)(Questions-Export-2025-October-2).csv
prompting/: test_prompting_hackathon.ipynb
prompts/: rag_prompt.txt
source/: assistant.py
